--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "version": "0.0.1",
   "author": "Kevin LEVRON <kevin.levron@univ-pau.fr>",
   "private": false,
+  "license": "BSD-3-Clause",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/iutbay/mm.git"
+  },
+  "main": "dist/mm.min.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
@@ -11,6 +17,7 @@
   "dependencies": {
     "vue": "^2.2.4",
     "vuex": "^3.0.1",
+    "es6-promise": "^4.1.1",
     "axios": "^0.15.3"
   },
   "devDependencies": {
@@ -20,10 +27,11 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "es6-promise": "^4.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
+    "postcss-import": "^11.1.0",
+    "postcss-url": "^7.3.0",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
